# py-msg-reader

./: .gitignore  README.md  app.py  config.py  logger.py  pyproject.toml  requirements.txt  test.py
